test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/lh_compound_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  (
  identifier(x)
  -=
  const int(1)
  )
  ?
  (
  identifier(x)
  /=
  const int(2)
  )
  :
  const int(0)
  ;
  return
  identifier(x)
  ==
  const int(4)
  ;
  }
