test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/wrong_ternary_delimiter.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  return
  identifier(x)
  ?
  const int(1)
  =
  const int(2)
  ;
  }
